[project]
name = "paperslist"
version = "0.1.0"
description = "CLI tool and module to fetch PubMed research papers, filter for pharma/biotech authors, and output CSV"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)"
]

[tool.poetry]

[tool.poetry.scripts]
get-papers-list = "paperslist.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
